fix(frontend): add z-index to product item for hover effect to be visible

--- a/frontend/src/assets/styles/style.css
+++ b/frontend/src/assets/styles/style.css
@@ -204,6 +204,7 @@ a {
     text-decoration: none;
     display: block;
     position: relative;
+    z-index: 1;
     padding-bottom: 50px;
     cursor: pointer; }
     /* Product Card - Fixed Structure for Synchronized Cards */
